[package]
name = "ultimate_t3_server"
version = "0.1.0"
authors = ["Luke Emery-Fertitta <lemeryfertitta@gmail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
futures-channel = "0.3.28"
futures-util = { version = "0.3.28", default-features = false, features = ["sink", "std"] }
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "macros", "rt-multi-thread"] }
tokio-tungstenite = "0.21.0"
